--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,7 @@ label {
 
 button {
   border-radius: 0;
+  vertical-align: center;
 }
 
 button:focus {
@@ -2471,14 +2472,16 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
+  margin-top: 3rem;
+  vertical-align: middle;
   color: #fff;
-  background-color: #bd5d38;
-  border-color: #bd5d38;
+  background-color: #4d588d;
+  border-color: #4d588d;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #9f4e2f;
-  border-color: #964a2c;
+  background-color: #697092;
+  border-color: #697092;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
@@ -9831,7 +9834,7 @@ a.text-info:hover, a.text-info:focus {
 }
 
 .text-warning {
-  color: #ffc107 !important;
+  color: #727375 !important;
 }
 
 a.text-warning:hover, a.text-warning:focus {
@@ -10119,6 +10122,15 @@ section.resume-section {
 section.resume-section .resume-section-content {
   width: 100%;
 }
+section.resume-section-content-sh {
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  max-width: 75rem;
+}
 
 @media (min-width: 768px) {
   section.resume-section {
@@ -10132,4 +10144,25 @@ section.resume-section .resume-section-content {
     padding-top: 5rem;
     padding-bottom: 5rem;
   }
+}
+.ed-list-item {
+  list-style: none;
+  margin-left: 0%;
+}
+.exp-list-head{
+  padding: 0;
+  margin: 0;
+}
+.exp-list-item {
+  list-style: outside;
+  margin-left: 2%;
+  padding-top: 0px;
+}
+.fa-li-low {
+  padding-left: 2.5%;
+  margin-bottom: 1000px;
+}
+.button-text{
+  color: white;
+  font-weight: 575;
 }
