--- a/css/styles.css
+++ b/css/styles.css
@@ -4360,6 +4360,7 @@ input[type=button].btn-block {
   flex-direction: column;
   flex: 1 0 15%;
   min-width: 75;
+  max-width: 50%;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
